Bug 1472386 - Take overflow-wrap into account when calculating min-content intrinsic size. r=jfkthame

MozReview-Commit-ID: Fu6Gbmxs4PN

--HG--
extra : rebase_source : b90c58f16c5cad717961b586fc0a6574343a5692